--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Vlad | Portofolio",
-	"description": "",
+	"description": "Hello there! Here you can see all my work, Vlad.",
 	"main": "server.js",
 	"version": "1.0.0",
 	"scripts": {
